presenter.css
@charset "utf-8";

html {
  font-family: 나눔바른고딕OTF, 나눔바른고딕, 나눔고딕OTF, 나눔고딕, sans-serif;
  word-break: keep-all;
  word-wrap: break-word;
  overflow: hidden;
  font-weight: bold;
}

body {
  background-color: #000000;
  margin: 0;
  padding: 0;
  cursor: none;
}

/************************************************/

h1, h2, h3, h4, h5, h6 {
  color: #ffff00;
  font-family: 나눔스퀘어OTF, 나눔스퀘어, 나눔바른고딕OTF, 나눔바른고딕, 나눔고딕OTF, 나눔고딕, sans-serif;
  margin: 0;
}
h1 {
  font-size: 1.5em;
}
h2 {
  font-size: 1.4em;
}
h3 {
  font-size: 1.3em;
}
h4 {
  font-size: 1.2em;
}
h5 {
  font-size: 1.1em;
}
h6 {
  font-size: 1.0em;
}

code {
  padding: 0;
  font-family: D2Coding, 나눔고딕코딩, Consolas, monospace;
}

/************************************************/

#text-section {
  position: absolute;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}
#text-section *::selection {
  background-color: rgba(0, 0, 0, 0);
}
#text-section *::-moz-selection {
  background-color: rgba(0, 0, 0, 0);
}

#text-div {
  position: relative;
  color: #ffffff;
  width: 90vw;
  /*
  min-width: 90vw;
  max-width: 90vw;
  */
  max-height: 90vh;
  padding: 5vh 5vw;
  font-size: 8.75vh;
  line-height: 1.4;
}
.top {
  top: -25vh;
}
.bottom {
  bottom: -25vh;
}
.left {
  text-align: left;
}
.center {
  text-align: center;
}
.right {
  text-align: right;
}

